--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-      "aws-sdk": "^2.1500.0"
+      "aws-sdk": "^2.1500.0",
+      "axios": "^1.6.0"
     }
   }
